# GEUSEMAKER

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.bmad-core/: install-manifest.yaml
.bmad-core/checklists/: story-closeout-checklist.md
.claude/agents/: 3d-renderer.md  AGENT_CHAINS.md  README.md  accessibility-compliance-auditor.md  aws-cost-optimizer.md  aws-deployment-architect.md  aws-deployment-debugger.md  aws-deployment-manager.md  build-deploy.md  chat-integration-specialist.md  ec2-provisioning-specialist.md  geuse-orchestration-manager.md  glass-ux-architect.md  glassmorphic-ui-designer.md  glassmorphic-ui.md  integration-orchestrator.md  n8n-automation-specialist.md  n8n-integration.md  performance-optimization-engine.md  playwright-mcp-tester.md  playwright-testing-virtuoso.md  setup.sh  spot-instance-optimizer.md  test-qa.md  theme-accessibility-guardian.md  threejs-scene-manager.md  threejs-visualization-master.md  unity-config-unifier.md  unity-deployment-orchestrator.md  unity-event-system-architect.md  unity-migration-orchestrator.md  unity-service-architect.md  unity-test-framework-architect.md
.cursor/rules/: aws-cost-optimizer.mdc  aws-deployment-debugger.mdc  bash-script-validator.mdc  dev.mdc  ec2-provisioning-specialist.mdc  security-validator.mdc  spot-instance-optimizer.mdc  test-runner-specialist.mdc
.github/workflows/: ci.yml
.venv312/: pyvenv.cfg
Workflows/: 01-pull-ollama-model-webhook.json  02-pull-ollama-model-manual.json  03-batch-pull-ollama-models.json  04-WEB-SCRAPE-ARCHITECTURE.md  04-web-scrape-to-qdrant.json  05-semantic-search-rag.json  06-qdrant-management.json  07-generic-service-installer.json  07-qdrant-cleanup.json  08-adk-install-create-deploy.json  QDRANT_MANAGEMENT_GUIDE.md  README.md
config/: README.md  ai-stack.yml  defaults.yml  logging.yml
docs/: CODEBASE_REVIEW.md  EPICS_AND_STORIES_SUMMARY.md  PRD.md  README.md  architecture.md  instance-recommendation.md  spot-instance-automation-nga.md  tui-brutalist-rollout.md
docs/analysis/: ami-validation-review.md  architecture-heuristics-remediation-plan.md
docs/architecture/: 1-introduction.md  10-infrastructure-and-deployment.md  11-error-handling-strategy.md  12-coding-standards.md  13-test-strategy-and-standards.md  14-security.md  15-checklist-results-report.md  16-next-steps.md  2-high-level-architecture.md  3-tech-stack.md  4-data-models.md  5-components.md  6-external-apis.md  7-core-workflows.md  8-database-schema-json-state-files.md  9-source-tree.md  index.md
docs/epics/: epic-1-project-foundation.md  epic-10-security-compliance.md  epic-11-error-handling-recovery.md  epic-12-tier-2-alb-deployment.md  epic-13-tier-3-cloudfront-deployment.md  epic-14-comfyui-ltx2-integration.md  epic-2-resource-discovery.md  epic-3-cost-optimization.md  epic-4-deployment-lifecycle-core.md  epic-5-validation-health-monitoring.md  epic-6-deployment-updates-destruction.md  epic-7-state-management.md  epic-8-interactive-mode.md  epic-9-non-interactive-mode.md
docs/prd/: acceptance-criteria.md  appendix-a-service-specifications.md  appendix-b-deployment-flow.md  appendix-c-cost-estimation-model.md  constraints-assumptions.md  core-requirements.md  document-change-log.md  executive-summary.md  goals-success-metrics.md  index.md  integration-requirements.md  non-functional-requirements.md  out-of-scope.md  problem-statement.md  user-personas-use-cases.md
docs/stories/: 1.1.project-foundation.md  10.1.enhanced-network-security.md  10.1.https-tls-implementation.md  10.2.iam-roles-access-control.md  10.3.data-protection.md  10.4.compliance-auditing.md  11.1.error-detection-classification.md  11.2.error-reporting-user-guidance.md  11.3.retry-logic-transient-failures.md  11.4.failure-recovery-rollback.md  12.1.alb-service-implementation.md  12.2.alb-orchestrator-implementation.md  12.3.alb-integration-deployment-state.md  13.1.cloudfront-service-implementation.md  13.2.gpu-instance-support.md  13.3.cloudfront-orchestrator-implementation.md  13.4.cloudfront-integration-deployment-state.md  2.1.vpc-subnet-discovery.md  2.2.security-group-keypair-discovery.md  2.3.efs-loadbalancer-discovery.md  2.4.resource-selection-ui.md  3.1.aws-pricing-service.md  3.2.spot-instance-selection.md  3.3.cost-estimation-engine.md  3.4.cost-tracking-budget-alerts.md  4.1.vpc-service.md  4.10.deep-learning-ami-support.md  4.2.efs-service.md  4.3.security-group-service.md  4.4.ec2-service.md  4.5.userdata-script-generation.md  4.6.deployment-orchestrator-tier1.md  4.7.deployment-listing.md  4.8.deployment-inspection.md  4.9.userdata-log-display.md  5.1.pre-deployment-validation.md  5.2.health-service.md  5.3.post-deployment-health-validation.md  5.4.validation-reporting.md  5.5.continuous-health-monitoring.md  (+16 more)
geusemaker/: __init__.py  __main__.py
geusemaker/cli/: __init__.py  branding.py  main.py  progress_events.py  ui.py
geusemaker/config/: __init__.py  loader.py  schema.py
geusemaker/infra/: __init__.py  clients.py  state.py
geusemaker/models/: __init__.py  cleanup.py  compute.py  cost.py  deployment.py  destruction.py  discovery.py  health.py  monitoring.py  pricing.py  resources.py  rollback.py  selection.py  update.py  userdata.py  validation.py
geusemaker/orchestration/: __init__.py  certificates.py  errors.py  normalization.py  rollback.py  tier1.py  tier2.py  tier3.py  update.py
geusemaker/progress/: __init__.py
geusemaker/runtime_assets/: README.md  __init__.py  docker-compose.yml  runtime.env.example
geusemaker/services/: __init__.py  acm.py  alb.py  base.py  cloudfront.py  ec2.py  efs.py  (+8 more)
scripts/: MANUAL_NGINX_FIX.md  README.md  README_HEALTHCHECK_PATCH.md  README_LETSENCRYPT.md  build_runtime_bundle.sh  complete_cert_install.sh  fix_and_install_cert.sh  fix_nginx_acme.sh  fix_nginx_config.sh  fix_nginx_final.sh  fix_nginx_manual.sh  fix_nginx_simple.py  fix_qdrant_ui_nginx.sh  geusemaker-tui.command  install_cert_simple.sh  install_letsencrypt_cert.sh  lint.sh  patch_qdrant_healthcheck.py  patch_webhook_healthcheck.py  ssm_install_cert.py  test.sh
tests/: conftest.py
(+237 files in other folders)
