[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "geusemaker"
version = "0.1.0"
description = "CLI for deploying the GeuseMaker AI infrastructure stack on AWS."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "GeuseMaker Team" }]
dependencies = [
  "click>=8.1",
  "rich>=13.9",
  "pydantic>=2.9",
  "boto3>=1.35",
  "httpx>=0.27",
  "filelock>=3.14",
  "pyyaml>=6.0",
  "questionary>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "moto==5.0.25",
  "ruff>=0.5",
  "mypy>=1.11",
  "types-PyYAML>=6.0",
]

[project.scripts]
geusemaker = "geusemaker.cli.main:cli"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "BLE", "B", "ASYNC", "S", "COM"]
ignore = [
  "S101",     # allow asserts in tests
  "E501",     # line too long - existing codebase uses longer lines
  "B904",     # raise from - too noisy for CLI exit patterns
  "N803",     # uppercase args - needed for AWS API compatibility in tests
  "N818",     # exception naming - existing exceptions don't use Error suffix
  "ASYNC109", # timeout param - false positive for sync wrappers
  "B023",     # lambda loop var - common pattern in safe_call wrappers
  "BLE001",   # blind exception - acceptable in rollback/monitoring code
  "UP046",    # generic subclass - existing code uses Generic[T] style
  "UP047",    # generic function - existing code uses TypeVar style
  "S112",     # try-except-continue - intentional in rollback code
  "E731",     # lambda assignment - acceptable in test fixtures
  "F841",     # unused variable - will fix incrementally
  "COM812",   # trailing comma - conflicts with formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
# NOTE: strict mode disabled due to pre-existing technical debt
# Re-enable incrementally as type coverage improves
strict = false
warn_unused_ignores = false
warn_redundant_casts = true
check_untyped_defs = false
show_error_codes = true
ignore_missing_imports = true
# Disable checks for pre-existing issues and external library typing (Rich, Click)
disable_error_code = ["attr-defined", "operator", "arg-type", "var-annotated", "return-value", "union-attr", "call-overload", "assignment"]

[tool.pytest.ini_options]
addopts = "-q --color=yes"
pythonpath = ["."]
