[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "geusemaker"
version = "0.1.0"
description = "CLI for deploying the GeuseMaker AI infrastructure stack on AWS."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "GeuseMaker Team" }]
dependencies = [
  "click>=8.1",
  "rich>=14.2,<16",
  "pydantic>=2.9",
  "boto3>=1.35",
  "httpx>=0.27",
  "filelock>=3.14",
  "pyyaml>=6.0",
  "questionary>=2.1,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "moto==5.0.25",
  "ruff>=0.15.22,<0.16",  # pinned: new lint rules in minor bumps otherwise break CI
  "mypy>=1.11",
  "types-PyYAML>=6.0",
  "import-linter>=2.0",
]
tui = ["textual>=8.2,<9"]

[project.scripts]
geusemaker = "geusemaker.cli.main:cli"

[tool.hatch.build]
include = [
  "geusemaker/runtime_assets/**/*",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "BLE", "B", "ASYNC", "S", "COM"]
ignore = [
  "S101",     # allow asserts in tests
  "E501",     # line too long - existing codebase uses longer lines
  "B904",     # raise from - too noisy for CLI exit patterns
  "N803",     # uppercase args - needed for AWS API compatibility in tests
  "N818",     # exception naming - existing exceptions don't use Error suffix
  "ASYNC109", # timeout param - false positive for sync wrappers
  "B023",     # lambda loop var - common pattern in safe_call wrappers
  "UP046",    # generic subclass - existing code uses Generic[T] style
  "UP047",    # generic function - existing code uses TypeVar style
  "S112",     # try-except-continue - intentional in rollback code
  "E731",     # lambda assignment - acceptable in test fixtures
  "F841",     # unused variable - will fix incrementally
  "COM812",   # trailing comma - conflicts with formatter
  "UP042",    # str+Enum mixin is intentional; StrEnum changes str()/Click rendering
]

[tool.ruff.lint.per-file-ignores]
# Tests use pytest's synchronous tmp_path inside async pilot tests; the blocking
# path methods are harmless there.
"tests/**" = ["ASYNC240"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
# NOTE: strict mode disabled due to pre-existing technical debt
# Re-enable incrementally as type coverage improves
strict = false
warn_unused_ignores = false
warn_redundant_casts = true
check_untyped_defs = false
show_error_codes = true
ignore_missing_imports = true
# Disable checks for pre-existing issues and external library typing (Rich, Click)
disable_error_code = ["attr-defined", "operator", "arg-type", "var-annotated", "return-value", "union-attr", "call-overload", "assignment"]

[tool.pytest.ini_options]
addopts = "-q --color=yes"
pythonpath = ["."]

[tool.importlinter]
root_package = "geusemaker"

# Layered architecture: CLI -> Orchestration -> Services -> Infra.
# Each layer may import lower layers, never higher ones. Shared low-level
# packages (models, config, progress, utils, runtime_assets) sit outside the
# stack and may be imported by anyone, so they are intentionally omitted.
[[tool.importlinter.contracts]]
name = "Layered architecture (CLI > Orchestration > Services > Infra)"
type = "layers"
layers = [
  "geusemaker.cli",
  "geusemaker.orchestration",
  "geusemaker.services",
  "geusemaker.infra",
]

# Explicit forbidden edges mirroring tests/unit/test_architecture/test_import_direction.py:
# orchestration and services must never depend on the presentation (CLI) layer.
[[tool.importlinter.contracts]]
name = "Orchestration and Services must not import CLI"
type = "forbidden"
source_modules = [
  "geusemaker.orchestration",
  "geusemaker.services",
]
forbidden_modules = [
  "geusemaker.cli",
]

# Services must not depend on Orchestration (services are a lower layer).
[[tool.importlinter.contracts]]
name = "Services must not import Orchestration"
type = "forbidden"
source_modules = [
  "geusemaker.services",
]
forbidden_modules = [
  "geusemaker.orchestration",
]
